<resources>
    <string name="app_name">TaskMateApp</string>
    <string name="login_button">Inicio de Sesión</string>
    <string name="account_question">¿No tienes una cuenta?</string>
    <string name="register_button">Registrate</string>
    <string name="name_label">Nombre</string>
    <string name="email_label">Correo electronico</string>
    <string name="password_label">Contraseña</string>
    <string name="confirm_password_label">Confirmar Contraseña</string>
    <string name="login_question">¿Tienes una cuenta?</string>

    <string name="view_history_button">Ver historial</string>
    <string name="weekly_tasks_menu">Tareas</string>
    <string name="create_task_button">Crear Tarea</string>
    <string name="edit_task_title">Editar tarea</string>
    <string name="task_name_label">Nombre de la actividad</string>
    <string name="category_label">Categoría</string>
    <string name="update_button">Actualizar</string>
    <string name="register_button2">Registrar</string>
    <string name="program_tasks_menu">Programar actividades</string>
    <string name="tasks_label">Tareas</string>
    <string name="hour_task">00:00</string>

    <string name="save_changes_button">Guardar cambios</string>
    <string name="cancel_button">Cancelar</string>
    <string name="team_title">Equipo</string>
    <string name="members_label">Miembros</string>
    <string name="home_code">Codigo casa:</string>
    <string name="home_name">Nombre de la casa:</string>
    <string name="admin_permissions_title">Permisos de administrados</string>
    <string name="admin_permissions_description">Al otorgarle permisos de administrador a cualquier usuario, este podrá editar, programar, asignar, eliminar y agregar tareas</string>
    <string name="tasks_history_title">Tareas</string>
    <string name="task_history_subtitle">Historial de tareas</string>

    <string name="change_profile_button">Cambiar perfil</string>
    <string name="change_home_button">Cambiar de hogar</string>
    <string name="logout_button">Cerrar sesión</string>


    //Inicio layout
    <string name="bienvenido">Binvenido a Taskmate</string>
    <string name="register_new_home_title">Registrar un nuevo hogar</string>
    <string name="register_new_home_description">Empieza con un hogar, donde tu serás el administrador y podrás registrar tareas y asignarlas a cada miembro.</string>
    <string name="register_home_button">Registrar hogar</string>
    <string name="join_home_title">Unirse a un hogar</string>
    <string name="join_home_description">Consigue un código de invitación de un hogar. Rellena el código y selecciona el botón para unirte.</string>
    <string name="join_home_button">Unirse a un hogar</string>


    //Menu Layout
    <string name="hello">Hola Jullian</string>


    //Agregar Tarea
    <string name="schedule_task_title">Programa la tarea</string>
    <string name="select_options">Elige entre estas opciones para programar la tarea</string>
    <string name="repeat_task_option">Repetir semanalmente</string>
    <string name="no_repeat_option">No repetir</string>
    <string name="membros_label">Miembros</string>
    <string name="select_members_label">Selecciona los miembros que harán la tarea</string>
    <string name="select_task_label">Selecciona la tarea a programar</string>
    <string name="room">Ordenar el cuarto</string>
    <string name="iron_clothes">Planchar la ropa</string>
    <string name="cook_food">Hacer comida</string>
    <string name="schedule_task_button">Programar tarea</string>
    <string name="choose_an_hour">Selecciona una hora</string>

    //Configuracion Activity
    <string name="settings_title">Configuración</string>


    //Registro Activity
    <string name="add_profile_picture">Agregar foto de perfil (opcional)</string>
    //Icono Etiqueta
    <string name="gray_tag_description">Gray tag</string>


    //tareas semanles activity
    <string name="weekly_tasks_title">Tareas semanales</string>

    //Actualizar tarea
    <string name="btn_actualizar_tarea">Actualizar tarea</string>

    //Image label
    <string name="image_description">Image label</string>

    //Hint text
    <string name="hint"> </string>

    //actualizar tarea strings screen
    <string name="nombre_de_la_actividad">Nombre de la actividad</string>
    <string name="placeholder_activity_name">Nombre corto que describe la actividad a realizar</string>
    <string name="descripcion_de_la_actividad">Descripción de la actividad</string>
    <string name="description_field_activity_update">Descripción</string>

    //actualizar usuario strings screen
    <string name="name_example">name example</string>
    <string name="error_invalid_data">Error: datos inválidos</string>

    //historial strings screen
    <string name="text_example">text example</string>
    <string name="history_status_pending">Pendiente</string>
    <string name="history_status_late">No se hizo</string>
    <string name="history_month">Month</string>
    <string name="history_actual_date">Day</string>

    //fragment screen
    <string name="nombre_de_usuaro">Nombre del usuario</string>

    //Fragment inicio screen
    <string name="sun_day">Dom</string>
    <string name="mon_day">Lun</string>
    <string name="tue_day">Mar</string>
    <string name="wed_day">Mie</string>
    <string name="thu_day">Jue</string>
    <string name="fri_day">Vie</string>
    <string name="sat_day">Sab</string>
    <string name="day_of_week">Day</string>

    //item user home screen
    <string name="enter">Entrar</string>
    <string name="house_name">Nombre del hogar</string>

    //item miembro home screen
    <string name="role_admin">Administrador</string>

    //update rol screen
    <string name="update_rol_name">Nombre del usuario</string>
    <string name="update_rol_admin_permissions">Permisos del administrador</string>
    <string name="update_rol_manage_description">Gestiona los derechos de administrador</string>
    <string name="update_rol_description_desc">Al otorgar permisos de Moderador a cualquier usuario, este podrá editar, programar, asignar, eliminar y agregar tareas.</string>
    <string name="uldate_rol_button_content">Actualizar Rol</string>

    <string name="desc_back_button">Volver</string>

    //item asigned task screen
    <string name="asigned_task_name">Nombre de la tarea</string>

</resources>