<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/logo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:contentDescription="@string/image_description"
            android:src="@drawable/monito_limpiando" />

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/email_label"
            android:background="@color/lightGrey"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="#212121"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/password_label"
            android:background="@color/lightGrey"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="#212121"
            android:textSize="16sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rectangular_button"
            app:backgroundTint="@null"
            android:text="@string/login_button"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_question"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/register_button"
                android:textColor="#333333"
                android:textStyle="bold"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_invalid_data"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:paddingTop="16dp" />

    </LinearLayout>
</ScrollView>
