<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignInActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Logo -->
        <ImageView
            android:layout_width="171dp"
            android:layout_height="46dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/image_description"
            android:src="@drawable/logo" />

        <!-- Título -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/add_profile_picture"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <!-- Imagen de perfil -->
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="80dp"
            android:layout_height="68dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:contentDescription="@string/image_description"
            />

        <!-- Nombre -->
        <EditText
            android:id="@+id/userEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/lightGrey"
            android:hint="@string/name_label"
            android:inputType="textPersonName"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:importantForAutofill="yes"
            android:maxWidth="488dp"
            android:autofillHints="name" />

        <!-- Email -->
        <EditText
            android:id="@+id/emailEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/lightGrey"
            android:hint="@string/email_label"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:importantForAutofill="yes"
            android:maxWidth="488dp"
            android:autofillHints="emailAddress"/>

        <!-- Contraseña -->
        <EditText
            android:id="@+id/passwordEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/lightGrey"
            android:hint="@string/password_label"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:importantForAutofill="yes"
            android:maxWidth="488dp"
            android:autofillHints="password" />

        <!-- Confirmar contraseña -->
        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/lightGrey"
            android:hint="@string/confirm_password_label"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:importantForAutofill="yes"
            android:maxWidth="488dp"
            android:autofillHints="password" />

        <!-- Botón -->
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:background="@drawable/rectangular_button"
            android:text="@string/register_button"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:padding="16dp"
            app:backgroundTint="@null" />

        <!-- ¿Ya tienes cuenta? -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_question"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/register_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/login_button"
                android:textColor="@color/grey"
                android:textStyle="bold"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Error -->
        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_invalid_data"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:paddingTop="16dp" />

    </LinearLayout>
</ScrollView>
