<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InicioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bienvenido" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imgTendedero"
        android:layout_width="match_parent"
        android:layout_height="444dp"
        app:srcCompat="@drawable/tendedero" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtRegistrarNuevoHogar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_new_home_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_new_home_description" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/btn_unirse_hogar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textColor="@color/lightSkyBlue"
                    android:text="@string/register_home_button"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_unirse_hogar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_home_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_unirse_hogar_descripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_home_description" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/btn_registar_hogar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/join_home_button"
                    android:textColor="@color/lightSkyBlue"
                    android:textSize="16sp" />

            </LinearLayout>

        </RelativeLayout>



    </LinearLayout>



</LinearLayout>