<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginHorizontal="12dp"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="4dp"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/account_circle"
            android:scaleType="centerCrop"
            android:background="@drawable/circle_mask"
            android:clipToOutline="true"
            android:contentDescription="@string/image_description"
            android:layout_marginEnd="12dp" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/name_label"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/user_role"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/role_admin"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@color/lightBlue"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>