<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"

    >

    <ImageView
        android:layout_width="171dp"
        android:layout_height="46dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="-18dp"
        android:src="@drawable/logo" />


    <org.imaginativeworld.whynotimagecarousel.ImageCarousel
        android:id="@+id/carousel"
        android:layout_width="match_parent"
        android:layout_height="332dp"
        app:carouselBackground="@color/white"
        app:showBottomShadow="false"
        app:showNavigationButtons="false"
        app:showTopShadow="false" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="324dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/lightSkyBlue"
        android:text="@string/login_button"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/account_question"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/register_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:gravity="center"
            android:text="@string/register_button"
            android:textColor="@color/mediumGrey"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>