<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".configuration"
    android:background="@color/white"
    >

    <LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".member_configuration">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.25"
        android:orientation="vertical">

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:text="@string/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:src="@drawable/account_circle"
            android:background="@drawable/circle_mask"
            android:contentDescription="@string/image_description"
            android:clipToOutline="true"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/nombre_de_usuaro"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="32dp"
            android:background="@drawable/border_box"
            android:elevation="2dp"
            android:layout_marginEnd="18dp"
            android:layout_marginStart="18dp">

            <LinearLayout
                android:id="@+id/ll_cambiarPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/account_circle"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/image_description"
                    android:background="@drawable/circle_mask"
                    android:layout_marginEnd="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_profile_button"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#DDDDDD" />

            <LinearLayout
                android:id="@+id/ll_cambiarHogar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/rocket"
                    android:contentDescription="@string/image_description"
                    android:layout_marginEnd="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_home_button"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#DDDDDD" />

            <LinearLayout
                android:id="@+id/ll_cerrarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/logout"
                    android:contentDescription="@string/image_description"
                    android:layout_marginEnd="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout_button"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:orientation="vertical">

    </LinearLayout>
</LinearLayout>
</FrameLayout>